<resources>
    <string name="app_name">Popular Movies</string>
    <string name="content_authority">com.debdroid.popularmovies</string>
    <string name="grid_image_view_content_description">Movie poster image</string>
    <string name="menu_action_sort">Sort</string>
    <string name="menu_share_action_title">Share</string>
    <string name="menu_action_sort_most_popular">Most Popular</string>
    <string name="menu_action_sort_highest_rated">Highest Rated</string>
    <string name="menu_action_sort_user_favourite">User Favourite</string>
    <string name="detail_movie_release_date_label">Release Date:</string>
    <string name="detail_movie_vote_average_label">Vote Average:</string>
    <string name="detail_movie_plot_synopsis_label">Synopsis:</string>
    <string name="detail_movie_user_favourite_label">User Favourite:</string>
    <string name="detail_movie_trailer_label">Trailers:</string>
    <string name="detail_movie_review_label">Reviews:</string>
    <string name="video_trailer_play_label">Trailer</string>
    <string name="review_author_label">Author: </string>
    <string name="error_msg_tmdb">Something went wrong, so couldn\'t retrieve any data</string>
    <string name="error_msg_user_favourite">No movie present in user favourite list</string>
    <string name="detail_backdrop_content_description">Movie Backdrop Image</string>
    <string name="detail_poster_content_description">Movie Poster Image</string>
    <string name="favourite_image_button_content_description">User Favourite Button</string>
    <string name="video_play_image_button_content_description">Trailer Play Button</string>
    <string name="poster_image_transition">poster_transition</string>
    <string name="no_internet_connection_msg">No internet connection.</string>
    <string name="movie_insert_msg">Movie \"%1$s\" added to favourite list</string>
    <string name="movie_delete_msg">Movie \"%1$s\" removed from favourite list</string>

    <!-- SharedPreference key to store the sort type -->
    <string name="pref_user_sort_type_key">sort_type</string>
</resources>
