<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_sort"
        android:orderInCategory="300"
        android:title="@string/menu_action_sort"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_action_sort_most_popular"
                    android:title="@string/menu_action_sort_most_popular" />
                <item
                    android:id="@+id/menu_action_sort_highest_rated"
                    android:title="@string/menu_action_sort_highest_rated" />
                <item
                    android:id="@+id/menu_action_sort_user_favourite"
                    android:title="@string/menu_action_sort_user_favourite" />
            </group>
        </menu>
    </item>
</menu>